[package]
edition = "2021"
name = "app_assets"
description = "Example to load icons or images from assets folder."
publish = false
version = "0.4.2"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[lints]
workspace = true
