[package]
name = "app_assets"
description = "Example to load icons or images from assets folder."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui-unofficial.workspace = true
gpui-platform-gpui-unofficial.workspace = true
gpui-component = { workspace = true }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[lints]
workspace = true
