[package]
edition = "2021"
name = "dialog_overlay"
description = "An example of using gpui-component to create a Dialog with overlay."
publish = false
version = "0.4.2"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

[lints]
workspace = true
