[package]
name = "dialog_overlay"
description = "An example of using gpui-component to create a Dialog with overlay."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui-unofficial.workspace = true
gpui-platform-gpui-unofficial.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

[lints]
workspace = true
