[package]
name = "editor"
description = "An complex code editor example by integrating rust-analyzer with LSP features."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview", "tree-sitter-languages"] }
story.workspace = true
reqwest_client = { path = "../../crates/reqwest_client" }

chrono = "0.4"
fake = { version = "2.10.0", features = ["dummy"] }
rand = "0.8"
raw-window-handle = { version = "0.6", features = ["std"] }
regex = "1"
smol.workspace = true
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
serde = "1"
serde_json = "1"
unindent = "0.2.3"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree-sitter-navi = "0.2.2"
itertools = "0.14.0"
lsp-types.workspace = true
autocorrect = "2.14.2"
color-lsp = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[lints]
workspace = true
