[package]
edition = "2021"
name = "modal_overlay"
description = "An example of using gpui-component to create a modal with overlay."
publish = false
version = "0.4.0-preview1"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true }

[lints]
workspace = true
