[package]
name = "sidebar_icon"
description = "Example demonstrating a shadcn-style icon-collapsible sidebar."
version = "0.5.1"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

[lints]
workspace = true
